kubernetes/namespaces/default/minio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - image: quay.io/minio/minio:latest
          imagePullPolicy: IfNotPresent
          name: minio
          command:
            - /bin/bash
            - -c
          args: 
            - minio server /data --console-address :9001
          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: console
          volumeMounts:
            - name: minio-storage
              mountPath: /data
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /minio/health/live
              port: 9000
              scheme: HTTP
            successThreshold: 1
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 9000
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-storage
