kubernetes/namespaces/default/minio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio
  annotations:
    prometheus.io/probe: 'true'
spec:
  selector:
    app: minio
  ports:
    - name: console
      port: 80
      targetPort: console
    - name: api
      port: 9000
      targetPort: api
