kubernetes/namespaces/default/minio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
spec:
  ingressClassName: nginx
  rules:
    - host: s3.hyperserver.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: console
    - host: s3-api.hyperserver.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: api
